# mcp-print-env

./: client.py  main.py  pyproject.toml
