[project]
name = "eddie-mcp-print-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.2",
    "requests>=2.32.4",
    "google-cloud-core>=2.4.1",
    "google-auth>=2.23.0",
    "google-cloud-artifact-registry>=1.11.3",
    "boto3>=1.35.0",
]
